--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </nav>
 
     <!-- image slider -->
-     <div class="container">
+     <div class="container mt-5">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item p-5 active">
